<resources>
    <string name="app_name">Who Bring Me</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_1">Get a quick pickup of your needs</string>
    <string name="title_2">Any where in Germany</string>
    <string name="title_3">Secure payments</string>

    <string name="label_one">You can list everything from A to Z on your
        \n order list and wait for the delivery
        \n person to deliver.
        \n \n Enter a time for how long you will
        \n make the delivery quotation available\nto the delivery workers."</string>
    <string name="label_two">Simple entry of location by location service.
        \n Activate your location on the smartphone to
        \n find your location . you can also manually
        \nhear the address.</string>
    <string name="label_three">Your money will be held with us until your \n
    order is delivered. \n \n
    Payment will only go out to the delivery \n
    service if you give them a transfer password \n
    upon receipt.</string>
    <string name="privacy_policy">By continuing, you agree that you have read and
        accept our <u>TC</u> and <u>Privacy Policy</u> </string>


    <string name="enter_phone_number">Enter Phone Number for \n Verification</string>
    <string name="when_an_unknown">when an unknown printer took a galley of \n type and scrambled.</string>

    <string name="facebook_app_id">409357586832772</string>
    <string name="fb_login_protocol_scheme">fb409357586832772</string>
    <string name="title_activity_delete_me">DeleteMeActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_phone_varification">PhoneVarificationActivity</string>
    <string name="title_activity_o_t_p">OTPActivity</string>
    <string name="title_activity_delete">DeleteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="skip">Skip</string>
    <string name="welcome_to">Welcome to</string>
    <string name="who_bring_me">Who Bring Me</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_yet">Don\'t have an account yet?</string>
    <string name="create_account">Create Account</string>
    <string name="client_receiver">Client/ Receiver</string>
    <string name="delivery_employee">Delivery Employee</string>
    <string name="registration">Registration</string>
    <string name="you_have_selected">You have selected : </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="_6_digit_mpin_number">6 digit mPin Number</string>
    <string name="submit">Submit</string>
    <string name="by_continuing_you_agree_that_you_have_read_and_accept_our_t_amp_cs_and_privacy_policy">By continuing, you agree that you have read and accept our <u>T&amp;Cs</u> and <u>Privacy Policy</u></string>
    <string name="please_wait_we_will_auto_verify_nthe_otp_sent_to">Please Wait. We will auto verify\nthe OTP sent to </string>
    <string name="auto_verifying_your_otp_in_00_12">Auto verifying your OTP in</string>
    <string name="verify">Verify</string>
    <string name="don_t_receive_code_resend_code">Don\'t Receive Code?</string>
    <string name="resend_code">Resend Code</string>
    <string name="get_start">Get Start</string>
    <string name="there_are_no_job">There are no job!</string>
    <string name="please_click_this">Please Click this</string>
    <string name="icon_and">icon and</string>
    <string name="post_a_job">post a job</string>
    <string name="create_a_job">Create a Job</string>
    <string name="what_do_you_want_to_post_about">What do you want to post about ?</string>
    <string name="how_long_you_want_offer_this_job">How long you want offer this job ?</string>
    <string name="minute">minutes</string>
    <string name="job_total_amount">Job Total Amount</string>
    <string name="payment">Payment</string>
    <string name="job_post_preview">Job Post Preview</string>
    <string name="euro">Euro</string>
    <string name="mint">Mint</string>
    <string name="job_description">Job Description</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="paypal">PayPal</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="now_your_job_live_and_finding_delivery_employees_to_accept_the_job">Now your job live and finding delivery employees to accept the job</string>
    <string name="profile">Profile</string>
    <string name="job_post_limit">Job Post Limit</string>
    <string name="change_mpin">Change mPin</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="logout">Logout</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pin_code">Pin Code</string>
    <string name="update_profile">Update Profile</string>
    <string name="notification">Notification</string>
    <string name="no_notification_yet">No Notification Yet</string>
    <string name="order">Order#</string>
    <string name="job_code">Job Code :</string>
    <string name="write_a_review">Write a Review</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an">We will send you an</string>
    <string name="one_time_password">One Time Password</string>
    <string name="on_this_mobile_number">on this mobile number</string>
    <string name="get_otp">Get OTP</string>
    <string name="we_ve_sent_an_otp_to">We\'ve sent an OTP to</string>
    <string name="_91_9896632121">+91 9896632121</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="create_new_password">Create New Password</string>
    <string name="save_amp_continue"><![CDATA[Save & Continue]]></string>
    <string name="history">History</string>
    <string name="no_history_yet">No History Yet</string>
    <string name="latest_jobs">Latest Jobs</string>
    <string name="running_orders">Running Orders</string>
    <string name="total_amount">Total Amount</string>
    <string name="it_is_a_long_established_fact_that_a_reader_will_be_n_distracted_by_the_readable_content_of_a_page_n_when_looking_at_its_layout">It is a long established fact that a reader will be\n distracted by the readable content of a page\n when looking at its layout.</string>
    <string name="write_reviews">Write Reviews</string>
    <string name="write_your_review">Write your Review</string>
    <string name="card_details">Card Details</string>
    <string name="email">Email</string>
    <string name="post_code">Post Code</string>
    <string name="my_job">My Job</string>
    <string name="my_earning">My Earning</string>
    <string name="waiting">Waiting</string>
    <string name="reference_site_about_lorem_ipsum_giving_information_on_its_origins">Reference site about Lorem Ipsum, giving information on its origins</string>
    <string name="receiver_time">Receiver Time</string>
    <string name="order_date">Order Date</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="accepted_time">Accepted Time :</string>
    <string name="no">No</string>
    <string name="enter_the_reason">Enter the Reason</string>
    <string name="complete_time">Complete Time :</string>
    <string name="reviews">Reviews</string>
    <string name="view">View</string>
    <string name="delivered_orders">Delivered Orders</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="total_earning">Total Earning</string>
    <string name="transactions_history">Transactions History</string>
    <string name="withdraw_request">Withdraw Request</string>
    <string name="monthly_earning">Monthly Earning</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="transfer_bank">Transfer Bank</string>
    <string name="phone_number_change">Phone Number Change</string>
    <string name="document_upload">Document Upload</string>
    <string name="upload_front_page">Upload Front Page</string>
    <string name="upload_jpg_jpeg_or_png_file_and_not_exceeding_5m">Upload .jpg, .jpeg or .png file and not exceeding 5M</string>
    <string name="order_time">Order Time</string>
    <string name="complete">Complete</string>
    <string name="payment_methods_colun">Payment Methods:</string>
    <string name="bank">Bank</string>
    <string name="network_error">No internet available</string>
    <string name="change_password">Change Password</string>
    <string name="declineOrderText">Are you sure you want to Decline\nthis order?</string>
    <string name="enter_order_number">Enter Order Number</string>
    <string name="alert_text">Alert</string>
    <string name="card_holder">CARD HOLDER</string>
    <string name="expires">EXPIRES</string>
    <string name="cvv">CVV</string>
    <string name="register_mobile">Enter registered mobile number</string>

</resources>