<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.phpexpert.bringme.ui.employee.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/employee_fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.phpexpert.bringme.ui.employee.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/employee_fragment_history" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.phpexpert.bringme.ui.employee.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/employee_fragment_notifications" />
  <fragment
        android:id="@+id/navigation_profile"
        android:name="com.phpexpert.bringme.ui.employee.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/employee_profile_fragment" />
</navigation>