<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/header_bg"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_80sdp"
            android:src="@drawable/login_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/headerImage"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/welcome_to"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <TextView
            android:id="@+id/whoBringMeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/who_bring_me"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_21sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

        <LinearLayout
            android:id="@+id/layoutMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/whoBringMeText">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countyCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                app:ccpDialog_allowSearch="true"
                app:ccpDialog_showCloseIcon="true"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showFullName="false"
                app:ccp_showNameCode="false"
                app:ccp_showPhoneCode="true"
                app:ccp_textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@null"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:hint="@string/enter_mobile_number"
                android:inputType="number"
                android:paddingTop="@dimen/_5sdp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_11sdp"
                tools:ignore="Autofill" />

        </LinearLayout>

        <View
            android:id="@+id/mobileView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/view_color"
            app:layout_constraintTop_toBottomOf="@+id/layoutMobileNumber" />


        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@null"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingTop="@dimen/_5sdp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobileView"
            tools:ignore="Autofill" />

        <View
            android:id="@+id/passwordView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/view_color"
            app:layout_constraintTop_toBottomOf="@+id/passwordET" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            app:layout_constraintTop_toBottomOf="@+id/passwordView"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/color_text_grey"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_20sdp" />


        <TextView
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rectangle_green"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/login"
            android:gravity="center"
            android:textColor="@color/white"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:textSize="@dimen/_13sdp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="@dimen/_10sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_account_yet"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="#00A8EC"
                android:layout_marginStart="@dimen/_2sdp"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>