<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/_15sdp"
        android:background="@color/backgroundColor">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/job_amount_bg"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/job_total_amount"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_9sdp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal"
                tools:ignore="RelativeOverlap">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="50"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_15sdp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/euro"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_7sdp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/job_time_bg"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/how_long_you_want_offer_this_job"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_9sdp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal"
                tools:ignore="RelativeOverlap">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="20"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_15sdp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/mint"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_7sdp" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/job_description"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="Lorem Ipsum is simply dummy text of the print ing and typesetting industry. Lorem Ipsum has been the industry's standard dummy"
            android:textColor="@color/colorDarkGrey"
            android:textSize="@dimen/_9sdp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="19 Mar'2021, Friday"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/text_color_dark"
            android:layout_gravity="end"
            tools:ignore="HardcodedText" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#ECECEC"
            android:layout_marginTop="@dimen/_15sdp" />
    </LinearLayout>
</layout>