<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/box_inset_layout_padding"
        tools:context=".activities.OTPActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_minus10sdp"
                android:src="@drawable/back_arrow"
                tools:ignore="ContentDescription" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/please_wait_we_will_auto_verify_nthe_otp_sent_to_917838939694"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_15sdp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/otp_ic"
                android:textSize="@dimen/_20sdp"
                tools:ignore="ContentDescription" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="horizontal"
                android:padding="@dimen/_4sdp">

                <com.chaos.view.PinView
                    android:id="@+id/PinView"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:elevation="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="number"
                    android:padding="@dimen/_6sdp"
                    android:textColor="@color/text_color"
                    app:itemRadius="@dimen/_10sdp" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/auto_verifying_your_otp_in_00_12"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/_9sdp"
                android:textStyle="bold" />

            <android.widget.Button
                android:id="@+id/btn_verify"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button_shape_gray"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/verify"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_receive_code_resend_code"
                    android:textSize="@dimen/_9sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/color_text_grey"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGreen"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:textSize="@dimen/_11sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/resend_code" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/_minus5sdp"
            android:layout_marginBottom="@dimen/_minus5sdp"
            android:background="@drawable/bg_onboarding" />
    </RelativeLayout>
</layout>